# trabalhoPS

VM/: CMakeLists.txt  CPU.cpp  CPU.h  InterfaceGrafica.cpp  InterfaceGrafica.h  Makefile  Maquina.cpp  Maquina.h  Maquina_melhor.cpp  Maquina_melhor.h  Memoria.cpp  Memoria.h  Montador.cpp  Montador.h  Processador.cpp  Processador.h  README.MD  exemplo.asm  main.cpp
